docs(readme): comprehensive refactor — architecture, ring transport, demos, perf
Replaces the original README with a structured, accurate reference document:

- Opens with a clear motivation: why a unified runtime instead of glue code.
- ASCII architecture diagram showing the full layering: FlowRuntime,
  HandlerRegistry (ClassValue dispatch plans), aggregate runtime,
  outbox/inbox/saga, and the optional ring transport overlay.
- Layer table mapping each package root to its responsibilities and
  what MUST NOT cross into it.
- Updated quick-start using FlowRuntime.builder().handlers(...) vararg
  API (added in this session); all examples compile against the current
  codebase.
- Complete coverage of: commands (no-return + return-value + policy
  overrides), queries, aggregates, event listeners (fan-out rules),
  DispatchResult + ErrorPolicy exhaustive switch, ExecutionContext
  propagation and cancellation, transactional outbox with status
  lifecycle, inbox deduplication, event sourcing (AggregateRepository
  + snapshots), and sagas with compensation.
- Distributed Ring Transport section: live fan-out (RingEventBusBridge),
  durable fan-out (RingOutboxBridge), RING_BRIDGE_WITH_WORKER_FAILOVER
  pause/resume handshake, RingOps health facade, and CertificateSource
  SPI for hot-rotating mTLS certificates.
- Both runnable demos documented with their scenarios and expected flow.
- Performance table with captured JMH baselines (ns/op and us/op) for
  ClassValue lookup, event fan-out at 1/10/100 listeners, and
  TypeReference hash; build command included for local re-runs.
- Adapter module roadmap: 11 reserved seats (JDBC, OTel, Micrometer,
  Resilience4j, Kafka, RabbitMQ, Redis-Lettuce, Debezium, Spring,
  Quarkus, Micronaut) with concrete SPI descriptions.
- Build and quality-gates reference with exact Gradle task names.